--- a/ESignature_ELGAMAL/Form1.resx
+++ b/ESignature_ELGAMAL/Form1.resx
@@ -60,4 +60,7 @@
   <metadata name="tab1.GenerateMember" type="System.Boolean, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
     <value>False</value>
   </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+    <value>107</value>
+  </metadata>
 </root>
